--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "anhskohbo/no-captcha": "^3.0",
+        "fideloper/proxy": "^4.0",
+        "intervention/image": "dev-master",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
-        "santigarcor/laratrust": "5.0.*",
-        "intervention/image": "dev-master",
-        "fideloper/proxy": "^4.0"
+        "santigarcor/laratrust": "5.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
